Fixed problem with content being hidden behind the music track footer, altered the options container

--- a/frontend/src/app/(with-music-bar)/layout.module.css
+++ b/frontend/src/app/(with-music-bar)/layout.module.css
@@ -1,9 +1,12 @@
 .footer-container {
-    width: 100%;
+    position: fixed;
     bottom: 0;
-    position: absolute;
+    left: 0;
+    width: 100%;
+    z-index: 100;
 }
 
 .main-container {
     padding: 2rem;
+    padding-bottom: 8rem;
 }
